# sparse

./: CMakeLists.txt  README  README.md  spDoc.ms  spRevision  sparse.pc.in
inc/: spConfig.h  spDefs.h  spMatrix.h
include/: spCommon.h  spConfig.h  spDefs.h  spMatrix.h
src/: spAllocate.c  spBuild.c  spDefs.h  spFactor.c  spMatrix.h  spOutput.c  spSolve.c  spUtils.c
test/: CMakeLists.txt  main.c  smpl_test.c
